--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -20,3 +20,36 @@ springdoc:
   api-docs:
     path: /api/docs
 
+
+management:
+  health:
+    circuit-breakers:
+      enabled: true
+  endpoint:
+    health:
+      show-details: always
+    web:
+      exposure:
+        include: "*"
+
+
+        management.health.circuitbreakers.enabled: false
+        management.health.ratelimiters.enabled: true
+        resilience4j.circuitbreaker.configs.default.registerHealthIndicator: true
+#Resiliance
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        minimum-number-of-calls: 5
+        wait-duration-in-open-state: 3s
+        permitted-number-of-calls-in-half-open-state: 3
+        automatic-transition-from-open-to-half-open-enabled: true
+        sliding-window-size: 10
+        failure-rate-threshold: 50
+        slow-call-rate-threshold: 50
+        sliding-window-type: COUNT_BASED
+  timelimiter:
+    configs:
+      default:
+        timeout-duration: 5s
